Done dang ky dang nhap

--- a/surveyweb/appsettings.json
+++ b/surveyweb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SurveyDb": "Data Source=LAPTOP-IMMG5O6N\\SQLEXPRESS;Initial Catalog=SurveyDatabase;Integrated Security=True;Trust Server Certificate=True"
+    "SurveyDb": "Data Source=DESKTOP-031D4J1;Initial Catalog=SurveyDatabase;Integrated Security=True;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
